--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Random Users-->
+        <scene sceneID="x9e-ak-aGy">
+            <objects>
+                <viewController id="ebu-Xb-zf2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="96d-FU-VXg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FFc-B3-zXc">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationWidth="0.0" reuseIdentifier="UserCell" rowHeight="66" id="Fym-uC-jlM">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="66"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fym-uC-jlM" id="rjA-9Z-Rvv">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dkp-Ss-1jN">
+                                                    <rect key="frame" x="20" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="aV8-DE-ndY"/>
+                                                        <constraint firstAttribute="width" constant="50" id="quM-RD-Tyk"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="f52-N6-ees">
+                                                    <rect key="frame" x="78" y="19" width="308" height="28"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="f52-N6-ees" firstAttribute="top" secondItem="rjA-9Z-Rvv" secondAttribute="topMargin" constant="8" id="4XQ-4f-zME"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="f52-N6-ees" secondAttribute="trailing" constant="8" id="DSQ-Yl-vh7"/>
+                                                <constraint firstItem="dkp-Ss-1jN" firstAttribute="leading" secondItem="rjA-9Z-Rvv" secondAttribute="leading" constant="20" id="TOd-WP-YfD"/>
+                                                <constraint firstItem="f52-N6-ees" firstAttribute="leading" secondItem="dkp-Ss-1jN" secondAttribute="trailing" constant="8" id="WfS-4M-3Rt"/>
+                                                <constraint firstItem="dkp-Ss-1jN" firstAttribute="top" secondItem="rjA-9Z-Rvv" secondAttribute="top" constant="8" id="jbF-LF-ZbU"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="f52-N6-ees" secondAttribute="bottom" constant="8" id="rJ5-rA-R6A"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Xbj-ia-Qv5" kind="presentation" id="K9x-zg-yAx"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Ya3-xA-BBh" firstAttribute="bottom" secondItem="FFc-B3-zXc" secondAttribute="bottom" id="4vt-WK-b3d"/>
+                            <constraint firstItem="Ya3-xA-BBh" firstAttribute="trailing" secondItem="FFc-B3-zXc" secondAttribute="trailing" id="SJv-HS-TjU"/>
+                            <constraint firstItem="FFc-B3-zXc" firstAttribute="top" secondItem="Ya3-xA-BBh" secondAttribute="top" id="a8g-Cc-Awi"/>
+                            <constraint firstItem="FFc-B3-zXc" firstAttribute="leading" secondItem="Ya3-xA-BBh" secondAttribute="leading" id="dfr-zw-Jc5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ya3-xA-BBh"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Random Users" id="V6f-fl-ig2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s4w-xb-fNK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="908.69565217391312" y="44.866071428571423"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Kac-UW-J2T">
+            <objects>
+                <viewController id="Xbj-ia-Qv5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H9u-vs-1av">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="8qt-ZR-bf6"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ySx-IX-FPD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1844.9275362318842" y="44.866071428571423"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iDG-Bj-Jwq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="255-53-SRa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="y7H-rB-mVD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ebu-Xb-zf2" kind="relationship" relationship="rootViewController" id="lwt-Ar-tBx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8CE-pE-c3b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1.4492753623188408" y="44.866071428571423"/>
+        </scene>
+    </scenes>
 </document>
